# codeway

./: README.md  pyproject.toml
src/codeway/: codeway.py
src/codeway/prompts/: codeway.md
