[tool.poetry]
name = "codeway"
version = "0.1.0"
description = ""
authors = ["Andrew Tanner <andrew@drewnix.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.49.0"

[tool.poetry.scripts]
codeway = "codeway.codeway:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
